# constancy-live

./: README.md  Untitled-2023-08-07-0508.excalidraw
.github/workflows/: [PROD]-ui-docker-image-build-and-push.yml  [PROD]-ui-docker-image-build.yml  [STAGE]-ui-docker-image-build-and-push.yml  [STAGE]-ui-docker-image-build.yml  api-nodejs.yml  codeql.yml  cypress.yml  sonarcloud.yml  ui-node.js.yml
services/api/: .env.default  .eslintrc.cjs  Dockerfile  docker-compose.yml  openapi.yml  package-lock.json  package.json
services/api/__tests/: app.test.ts
services/api/src/: app.ts  routes.ts  server.ts
services/api/src/components/jenkins/clients/: jenkins-client.ts
services/api/src/components/jenkins/clients/__tests__/: jenkins-client.spec.ts
services/api/src/components/jenkins/clients/interfaces/: JenkinsAuth.ts
services/api/src/components/jenkins/controllers/: index.ts  start-builds.ts
services/api/src/components/jenkins/controllers/interfaces/: BuildHost.ts  BuildJob.ts  HostJob.ts  StartBuildBody.ts
services/api/src/components/users/controllers/: get-profile.ts  index.ts
services/api/src/lib/email/exports/: index.ts  send-mail.ts
services/api/src/lib/email/exports/inner/: send-mail-callback.ts
services/api/src/lib/http/: HttpStatus.ts
services/api/src/lib/id/services/: generate-id.ts  index.ts
services/api/src/lib/logger/: logger.ts
services/api/src/middleware/: request-middleware.ts
services/cli/: pyproject.toml
services/ui/: cypress.config.ts  package-lock.json  package.json
services/ui/src/app/components/navbar/: navbar.component.html
(+3 files in other folders)
